fix overflow-x

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,10 +41,8 @@
 }
 
 .bg_animate {
-  /* width: 100%; */
-  /* height: 100%; */
+  overflow-x: hidden;
   background: #0D2673;
-  /* position: relative; */
 }
 
 .header_nav {
